Added jwt authorization,route protect and implemented user related api

--- a/config.env
+++ b/config.env
@@ -5,3 +5,5 @@ PASSWORD_USER=test123
 DATABASE=mongodb+srv://dhirajmaurya345:<PASSWORD>@cluster0.bpr4bg6.mongodb.net/?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=Mongoexpressjs002
+JWT_SCRET=this-is-top-screte
+JWT_EXPIRES_IN=90d
